# snakeGame

./: CMakeLists.txt  GameField.cpp  GameField.h  GameObject.cpp  GameObject.h  Position2D.h  main.cpp
core/: GameField.cpp  GameField.h  MapRenderer.cpp  MapRenderer.h
objects/: GameObject.h  Snake.cpp  Snake.h
utils/: GameController.cpp  GameController.h  Position2D.h  RenderInfo.h
